--- a/templates/base.html
+++ b/templates/base.html
@@ -18,14 +18,17 @@
 <body>
   
     <nav class="navbar navbar-expand-lg navbar-custom">
-      <a class="navbar-brand" href="home" style="color: white">MediText</a>
+      <a class="navbar-brand" href="/" style="color: white">EZY</a>
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="register">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="prescribe">Prescribe</a>
+              <a class="nav-link" href="request">Request</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="donate">Donate</a>
+            </li>  
           </ul>
       </nav>
     
