--- a/templates/home.html
+++ b/templates/home.html
@@ -40,11 +40,12 @@
         <div class="row">
          <div class="col-lg-1"></div>
          <div class="col-lg-10">
-           <h1 style="text-align:center; font-size:75px" f>Welcome to MediText</h1>
-           <h3 style="text-align:center;" f><i>Are You a Doctor or a Patient?</i></h3>
+           <h1 style="text-align:center; font-size:75px" f>Welcome to EZY</h1>
+           <h3 style="text-align:center;" f><i>Would You Like To Donate or Request?</i></h3>
            <br>
-        <a class="btn btn-primary btn-sm" href="login" role="button" style="width:100px; font-size:18px">Doctor</a> &emsp;
-        <a class="btn btn-primary btn-sm" href="prescribe" role="button" style="width:100px; font-size:18px">Patient</a>
+        <a class="btn btn-primary btn-sm" href="map" role="button" style="width:100px; font-size:18px">Donate</a> &emsp;
+        <a class="btn btn-primary btn-sm" href="register" role="button" style="width:100px; font-size:18px">Register</a> &emsp;
+        <a class="btn btn-primary btn-sm" href="login" role="button" style="width:100px; font-size:18px">Request</a>
          </div>
         <div class="col-lg-1"></div>
      </div>
