--- a/templates/base.html
+++ b/templates/base.html
@@ -21,14 +21,15 @@
       <a class="navbar-brand" href="/" style="color: white">EZY</a>
           <ul class="navbar-nav">
             <li class="nav-item">
+              <a class="nav-link" href="donate">Donate</a>
+            </li>  
+            <li class="nav-item">
               <a class="nav-link" href="register">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="request">Request</a>
+              <a class="nav-link" href="login">Request</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="donate">Donate</a>
-            </li>  
+            
           </ul>
       </nav>
     
